Fix GFCode pre-wrap for Fx2 * pre-wrap doesn't work in Fx2. Please test this in Fx3 and Fx3.1 to make   sure this double declaration works there.

--- a/content/css/gfcode.css
+++ b/content/css/gfcode.css
@@ -19,6 +19,7 @@
 }
 .message b > p, .message em > p {
     font-family: monospace !important;
+    white-space: -moz-pre-wrap;
     white-space: pre-wrap;
     background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCA\
     YAAAAfFcSJAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A%2FwD%2FoL2nkwAAAAlwSFlzAAALEwA\
